--- a/templates/index.html
+++ b/templates/index.html
@@ -11,20 +11,22 @@
     <div class="top">
         <div class="title"><h1>My Blog</h1></div>
     </div>
-    <div class="content">
-        <div class="card">
-            <h2>Just a blog post</h2>
-            <p class="text">Lorem ipsum dolor sit </p>
-            <a href="#">Read</a>
+    {% for blog in blogs %}
+        <div class="content">
+            <div class="card">
+                <h2>{{ blog['title'] }}t</h2>
+                <p class="text">{{ blog['subtitle'] }} </p>
+                <a href="{{ url_for('post_page', blog_id = blog['id']) }}">Read</a>
+            </div>
         </div>
-    </div>
-    <div class="content">
-        <div class="card">
-            <h2>Another blog post</h2>
-            <p class="text">Lorem ipsum dolor sit </p>
-            <a href="#">Read</a>
-        </div>
-    </div>
+    {% endfor %}
+<!--    <div class="content">-->
+<!--        <div class="card">-->
+<!--            <h2>Another blog post</h2>-->
+<!--            <p class="text">Lorem ipsum dolor sit </p>-->
+<!--            <a href="#">Read</a>-->
+<!--        </div>-->
+<!--    </div>-->
 </div>
 </body>
 <footer>
