--- a/templates/post.html
+++ b/templates/post.html
@@ -13,8 +13,8 @@
            </div>
         <div class="content">
             <div class="card">
-                <h2>Title</h2>
-                <p>Post Body</p>
+                <h2>{{  blog['titles'] }}</h2>
+                <p> {{ blog['body'] }}</p>
             </div>
 
     </div>
