completed capstone project

--- a/templates/post.html
+++ b/templates/post.html
@@ -13,8 +13,8 @@
            </div>
         <div class="content">
             <div class="card">
-                <h2>{{  blog['titles'] }}</h2>
-                <p> {{ blog['body'] }}</p>
+                <h2>{{  blog.title }}</h2>
+                <p> {{ blog.body }}</p>
             </div>
 
     </div>
