--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
     {% for blog in blogs %}
         <div class="content">
             <div class="card">
-                <h2>{{ blog['title'] }}t</h2>
-                <p class="text">{{ blog['subtitle'] }} </p>
-                <a href="{{ url_for('post_page', blog_id = blog['id']) }}">Read</a>
+                <h2>{{ blog.title }}t</h2>
+                <p class="text">{{ blog.subtitle }} </p>
+                <a href="{{ url_for('post_page', blog_id = blog.id) }}">Read</a>
             </div>
         </div>
     {% endfor %}
